fix(post): Fix catalogue_item > time > color

--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -22,7 +22,7 @@
   }
 
   &-time {
-    color: $default-tint;
+    color: $default-shade;
     font-family: $serif-secondary;
     letter-spacing: .5px;
   }
