update(color): Update color > code editor background|text color

--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -8,7 +8,8 @@ $grey-3: #f9f9f9 !default;
 $white: #fff !default;
 $blue: #4a9ae1 !default;
 $shadow-color: rgba(0, 0, 0, .2) !default;
-$code-color: #00DE5A !default;
+$code-color: #333333 !default;
+$code-background: rgba(27, 31, 35, 0.05) !default;
 
 // Fonts
 $serif-primary: 'Libre Baskerville', 'Times New Roman', Times, serif !default;
