--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -9,7 +9,7 @@ $white: #fff !default;
 $blue: #4a9ae1 !default;
 $shadow-color: rgba(0, 0, 0, .2) !default;
 $code-color: #333333 !default;
-$code-background: rgba(27, 31, 35, 0.05) !default;
+$code-background: #F6F8FA !default;
 
 // Fonts
 $serif-primary: 'Noto Sans KR' !default;
