--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,17 @@
-ㅇ
+<!DOCTYPE html>
+<html lang="en">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include navigation.html %}
+
+    <main>
+      {% include toc.html html=content %}
+      {{ content }}
+    </main>
+
+    {% include footer.html %}
+  </body>
+</html>
