fix(post): Fix post scss

--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -74,8 +74,8 @@
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
   margin-right: 0px;
-  font-size: 0.7rem;
-  border-left: 2px solid #e0d9e7;
+  font-size: 1rem;
+  border-left: 2px solid $default-color;
 
   display: none;
   @media (min-width: 75em){
