--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -84,6 +84,8 @@ footer {
   font-family: $serif-secondary;
   padding: 2rem 0;
   text-align: center;
+  display: flex;
+  justify-content: center;
 
   span {
     color: $default-color;
