add(tags): Add tags feature > post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,22 @@ layout: default
 
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-line"></div>
+  <div class="post-info">
+    <span>Written by</span>
+    {% if page.author %}
+    {{ page.author }}
+    {% else %}
+    {{ site.author.name }}
+    {% endif %}
+
+    {% if page.date %}
+    <br>
+    <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+    {% endif %}
+    {% if page.tags %} {% for tag in page.tags %}
+    <span class="tag">{{ tag }}</span>
+    {% endfor %} {% endif %}
+  </div>
 
   <article class="post-article">
     <div class="toc">
