--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -2,13 +2,13 @@
   padding: 3rem 0;
 
   &-info {
-    color: $default-tint;
+    color: $default-color;
     font-family: $serif-secondary;
     letter-spacing: 0.5px;
     text-align: center;
 
     span {
-      font-style: italic;
+      font-style: $serif-secondary;
     }
   }
 
