--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,25 +16,26 @@ layout: default
 <!--      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>-->
 <!--    {% endif %}-->
 <!--  </div>-->
+  <div class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-line"></div>
+    <div class="post-info">
+      {% if page.date %}
+      <span>
+        <time datetime="{{ page.date }}">{{ page.date | date: "%b.%d.%Y" }}</time>
+      </span>
+      {% endif %}
 
-  <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-line"></div>
-  <div class="post-info">
-    {% if page.date %}
-    <span>
-      <time datetime="{{ page.date }}">{{ page.date | date: "%b.%d.%Y" }}</time>
-    </span>
-    {% endif %}
-
-    {% if page.author %}
-    {{ page.author }}
-    {% else %}
-    {{ site.author.name }}
-    {% endif %}
-    <br>
-    {% if page.tags %} {% for tag in page.tags %}
-    <span class="tag">{{ tag }}</span>
-    {% endfor %} {% endif %}
+      {% if page.author %}
+      {{ page.author }}
+      {% else %}
+      {{ site.author.name }}
+      {% endif %}
+      <br>
+      {% if page.tags %} {% for tag in page.tags %}
+      <span class="tag">{{ tag }}</span>
+      {% endfor %} {% endif %}
+    </div>
   </div>
 
   <article class="post-article">
