--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -14,6 +14,15 @@
     span {
       font-style: $serif-secondary;
     }
+
+    span.tag {
+      font-style: $serif-secondary;
+      background-color: $code-background;
+      border-radius: 3px;
+      line-height: 1.4;
+      margin: 0 0 1rem;
+      padding: 1rem;
+    }
   }
 
   &-title {
