--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -17,7 +17,7 @@
 
     span.tag {
       font-style: $serif-secondary;
-      background-color: $code-background;
+      background-color: $default-tint;
       border-radius: 3px;
       line-height: 1.4;
       margin: 0 0 1rem;
