--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 {% for tag in site.data.tags %}
-<span class="tag" data-tag="{{tag}}">{{ site.data.format[tag] }}</span>
+<span class="tag" data-tag="{{tag}}">{{ site.data.tags }}</span>
 {% endfor %}
-
+<span>{{ site.data.tags }}</span>
 <div class="catalogue">
   {% for post in site.posts %}
     {% if post.sticky %}
