--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -20,7 +20,7 @@
       display: inline-block;
       padding: 0.3em 0.5em;
       margin: 0 0 0.25em 0;
-      background: $default-tint !important;
+      background: rgba(0, 0, 0, 0.1) !important;
       line-height: 1em;
       border-radius: 5px;
       color: $default-color;
