add(post): Add post > string, stringbuffer, stringbuilder

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<div class="tags-clouds">
-  {% for tag in site.tags %}
-  <a href="#{{ tag[0] }}">{{ tag[0] }}</a>
-  {% endfor %}
-</div>
+<!--<div class="tags-clouds">-->
+<!--  {% for tag in site.tags %}-->
+<!--  <a href="#{{ tag[0] }}">{{ tag[0] }}</a>-->
+<!--  {% endfor %}-->
+<!--</div>-->
 <span>{{ site.data.tags }}</span>
 <div class="catalogue">
   {% for post in site.posts %}
