fix(style): Fix style > h1 > font size > 2rem

--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -30,11 +30,14 @@ h3,
 h4,
 h5,
 h6 {
-  color: $default-shade;
+  color: $default-color;
   font-family: $sans-serif;
   line-height: normal;
 }
 
+h1 {
+  font-size: 2rem!important;!default
+}
 a {
   color: $blue;
   text-decoration: none;
