--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,13 @@ layout: default
       {% if page.tags %} {% for tag in page.tags %}
       <span class="tag">{{ tag }}</span>
       {% endfor %} {% endif %}
+      <br>
+      <div>
+        <a href="https://hits.seeyoufarm.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}"target="_blank">
+          <img
+                  src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}&count_bg=%23000000&title_bg=%23000000&icon=openstreetmap.svg&icon_color=%23E7E7E7&title=Visitors&edge_flat=false"/>
+        </a>
+      </div>
     </div>
   </div>
 
