--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,16 +20,21 @@ layout: default
     <h1 class="post-title">{{ page.title }}</h1>
     <div class="post-line"></div>
     <div class="post-info">
-      {% if page.date %}
-      <span>
-        <time datetime="{{ page.date }}">{{ page.date | date: "%b.%d.%Y" }}</time>
-      </span>
-      {% endif %}
 
       {% if page.author %}
-      {{ page.author }}
+      {{ page.author }} ·
       {% else %}
-      {{ site.author.name }}
+      {{ site.author.name }} ·
+      {% endif %}
+
+      {% include read_time.html %}
+
+      {% if page.date %}
+      <span>
+        <time datetime="{{ page.date }}">
+          {{ page.date | date: "%b.%d.%Y" }}
+        </time>
+      </span>
       {% endif %}
       <br>
       {% if page.tags %} {% for tag in page.tags %}
@@ -38,12 +43,10 @@ layout: default
       <br>
       <div>
         <a href="https://hits.seeyoufarm.com/{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}"target="_blank">
-          <img
-                  src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}&count_bg=%23000000&title_bg=%23000000&icon=github.svg&icon_color=%23E7E7E7&title=조회수&edge_flat=false"/>
+          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}&count_bg=%23000000&title_bg=%23000000&icon=github.svg&icon_color=%23E7E7E7&title=조회수&edge_flat=false"/>
         </a>
       </div>
-      <span class="reading-time">⏱ <%- symbolsTime(post.content, 4, 300, '분') %></span>
-      {% include read_time.html %}
+
 
     </div>
   </div>
