--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,10 +40,10 @@ layout: default
       {% if page.tags %} {% for tag in page.tags %}
       <span class="tag">{{ tag }}</span>
       {% endfor %} {% endif %}
-      <br>
-      <a>
+      <span style="float: right">
         <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}&count_bg=%23000000&title_bg=%23000000&icon=github.svg&icon_color=%23E7E7E7&title=조회수&edge_flat=false"/>
-      </a>
+      </span>
+      <br>
     </div>
   </div>
 
