--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -18,14 +18,15 @@
 .highlight .gu { color: #030; } /* Generic.Subheading */
 .highlight .gt { color: #9c6 } /* Generic.Traceback */
 .highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
+.highlight .kd { color: #aa0d91; } /* Keyword.Declaration */
 .highlight .kn { color: #069; } /* Keyword.Namespace */
 .highlight .kp { color: #069 } /* Keyword.Pseudo */
 .highlight .kr { color: #069; } /* Keyword.Reserved */
 .highlight .kt { color: #078; } /* Keyword.Type */
 .highlight .m { color: #f60 } /* Literal.Number */
 .highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
+.highlight .n { color: #000 } /* Name.Attribute */
+.highlight .na { color: #000 } /* Name.Attribute */
 .highlight .nb { color: #366 } /* Name.Builtin */
 .highlight .nc { color: #0a8; } /* Name.Class */
 .highlight .no { color: #360 } /* Name.Constant */
