--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -3,7 +3,7 @@
 .highlight .err { color: #a00; background-color: #faa } /* Error */
 .highlight .k { color: #aa0d91!important; } /* Keyword */
 .highlight .o { color: #555 } /* Operator */
-.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
+.highlight .cm { color: #000; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #099 } /* Comment.Preproc */
 .highlight .c1 { color: #999; } /* Comment.Single */
 .highlight .cs { color: #999; } /* Comment.Special */
@@ -42,7 +42,7 @@
 .highlight .w { color: #bbb } /* Text.Whitespace */
 .highlight .mf { color: #f60 } /* Literal.Number.Float */
 .highlight .mh { color: #f60 } /* Literal.Number.Hex */
-.highlight .mi { color: #1c00cf!important; } /* Literal.Number.Integer */
+.highlight .mi { color: #000!important; } /* Literal.Number.Integer */
 .highlight .mo { color: #f60 } /* Literal.Number.Oct */
 .highlight .sb { color: #c30 } /* Literal.String.Backtick */
 .highlight .sc { color: #c30 } /* Literal.String.Char */
