--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -33,7 +33,8 @@
     font-family: $sans-serif;
     font-size: 2rem;
     font-weight: 700;
-    margin: .5rem 0;
+    text-wrap: balance;
+    margin-bottom: 1rem;
   }
 
   &-line {
