--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -15,7 +15,7 @@ $code-background: #f2f2f2 !default;
 $serif-primary: "Noto Sans KR", "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif !default;
 $serif-secondary: "Noto Sans KR", "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif !default;
 $sans-serif: "Noto Sans KR", "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif !default;
-$monospaced: 'JetBrains Mono' !default;
+$monospaced: "Noto Sans KR", "Apple SD Gothic Neo", "Nanum Barun Gothic", "Nanum Gothic", Verdana, Arial, "Malgun Gothic", Dotum, sans-serif !default;
 
 @mixin box-sizing($type: border-box) {
   -webkit-box-sizing: $type;
