--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -18,13 +18,13 @@
 .highlight .gu { color: #030; } /* Generic.Subheading */
 .highlight .gt { color: #9c6 } /* Generic.Traceback */
 .highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #aa0d91; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
+.highlight .kd { color: #000; } /* Keyword.Declaration */
+.highlight .kn { color: #000; } /* Keyword.Namespace */
 .highlight .kp { color: #069 } /* Keyword.Pseudo */
 .highlight .kr { color: #069; } /* Keyword.Reserved */
 .highlight .kt { color: #000!important; } /* Keyword.Type */
 .highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
+.highlight .s { color: #000 } /* Literal.String */
 .highlight .n { color: #000 } /* Name.Attribute */
 .highlight .na { color: #000 } /* Name.Attribute */
 .highlight .nb { color: #366 } /* Name.Builtin */
@@ -33,9 +33,9 @@
 .highlight .nd { color: #99f } /* Name.Decorator */
 .highlight .ni { color: #999; } /* Name.Entity */
 .highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
+.highlight .nf { color: #000 } /* Name.Function */
 .highlight .nl { color: #99f } /* Name.Label */
-.highlight .nn { color: #0cf; } /* Name.Namespace */
+.highlight .nn { color: #000; } /* Name.Namespace */
 .highlight .nt { color: #2f6f9f; } /* Name.Tag */
 .highlight .nv { color: #033 } /* Name.Variable */
 .highlight .ow { color: #000; } /* Operator.Word */
