--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -1,7 +1,7 @@
 .highlight .hll { background-color: #ffc; }
 .highlight .c { color: #999; } /* Comment */
 .highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #aa0d91!important; } /* Keyword */
+.highlight .k { color: #000!important; } /* Keyword */
 .highlight .o { color: #555 } /* Operator */
 .highlight .cm { color: #000; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #099 } /* Comment.Preproc */
