--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,14 +41,14 @@ layout: default
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
   {% if paginator.previous_page %}
-  <a href="{{ paginator.previous_page_path | relative_url }}">&laquo; Prev</a>
+  <a href="{{ paginator.previous_page_path | relative_url }}">&laquo;</a>
   {% else %}
-  <span>&laquo; Prev</span>
+  <span>&laquo;</span>
   {% endif %}
 
   {% for page in (1..paginator.total_pages) %}
   {% if page == paginator.page %}
-  <em>{{ page }}</em>
+  <span>{{ page }}</span>
   {% elsif page == 1 %}
   <a href="{{ site.paginate_path | relative_url | replace: 'page:num/', '' }}">{{ page }}</a>
   {% else %}
@@ -57,9 +57,9 @@ layout: default
   {% endfor %}
 
   {% if paginator.next_page %}
-  <a href="{{ paginator.next_page_path | relative_url }}">Next &raquo;</a>
+  <a href="{{ paginator.next_page_path | relative_url }}">&raquo;</a>
   {% else %}
-  <span>Next &raquo;</span>
+  <span>&raquo;</span>
   {% endif %}
 </div>
 {% endif %}
