--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,8 +49,8 @@ layout: default
   {% for page in (1..paginator.total_pages) %}
   {% if page == paginator.page %}
   <span>{{ page }}</span>
-<!--  {% elsif page == 1 %}-->
-<!--  <a href="{{ site.paginate_path | relative_url | replace: 'page:num/', '' }}" style="color: black">{{ page }}</a>-->
+  {% elsif page == 1 %}
+  <a href="{{ site.paginate_path | relative_url | replace: 'page:num/', '' }}" style="color: black">{{ page }}</a>
   {% else %}
   <a href="{{ site.paginate_path | relative_url | replace: ':num', page }}" style="color: black">{{ page }}</a>
   {% endif %}
