--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,18 +37,12 @@ layout: default
 <!--  <a href="{{site.paginate_path}}" class="right">More</a>-->
 
 <!--</div>-->
-<span>{{ relative_url }}</span>
-<span>{{ site.paginate_path }}</span>
-<span>{{ paginator.page }}</span>
-<span>{{ paginator.total_pages }}</span>
-<span>{{ paginator.previous_page }}</span>
-<span>{{ paginator.next_page }}</span>
-<span>{{ paginator.page_path }}</span>
-<span>{{ paginator.previous_page_path }}</span>
-<span>{{ paginator.next_page_path }}</span>
-<span>{{ site.baseurl }}</span>
-<span>{{ site.paginate_path | relative_url }}</span>
-<span>{{ paginator.page_path | prepend: site.baseurl }}</span>
+<span>relative_url: {{ relative_url }}</span><br>
+<span>paginate_path: {{ site.paginate_path }}</span><br>
+<span>page_path: {{ paginator.page_path }}</span><br>
+<span>baseurl: {{ site.baseurl }}</span><br>
+<span>paginate_path: {{ site.paginate_path | relative_url }}</span><br>
+<span>page_path: {{ paginator.page_path | prepend: site.baseurl }}</span><br>
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
 
