--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -1,8 +1,8 @@
 .highlight .hll { background-color: #ffc; }
 .highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #000!important; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
+.highlight .err { color: #000; } /* Error */
+.highlight .k { color: #fc86c8!important; } /* Keyword */
+.highlight .o { color: #907ef6 } /* Operator */
 .highlight .cm { color: #000; font-style: italic } /* Comment.Multiline */
 .highlight .cp { color: #099 } /* Comment.Preproc */
 .highlight .c1 { color: #999; } /* Comment.Single */
@@ -13,32 +13,32 @@
 .highlight .gh { color: #030; } /* Generic.Heading */
 .highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
 .highlight .go { color: #aaa } /* Generic.Output */
-.highlight .gp { color: #009; } /* Generic.Prompt */
-.highlight .gs { } /* Generic.Strong */
-.highlight .gu { color: #030; } /* Generic.Subheading */
+.highlight .gp { color: #009 } /* Generic.Prompt */
+.highlight .gs { color: #000 } /* Generic.Strong */
+.highlight .gu { color: #030 } /* Generic.Subheading */
 .highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #000; } /* Keyword.Declaration */
-.highlight .kn { color: #000; } /* Keyword.Namespace */
+.highlight .kc { color: #069 } /* Keyword.Constant */
+.highlight .kd { color: #fc86c8 } /* Keyword.Declaration */
+.highlight .kn { color: #000 } /* Keyword.Namespace */
 .highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
-.highlight .kt { color: #000!important; } /* Keyword.Type */
+.highlight .kr { color: #069 } /* Keyword.Reserved */
+.highlight .kt { color: #74d6e2!important; } /* Keyword.Type */
 .highlight .m { color: #f60 } /* Literal.Number */
 .highlight .s { color: #000 } /* Literal.String */
 .highlight .n { color: #000 } /* Name.Attribute */
 .highlight .na { color: #000 } /* Name.Attribute */
 .highlight .nb { color: #366 } /* Name.Builtin */
-.highlight .nc { color: #000!important; } /* Name.Class */
+.highlight .nc { color: #74d6e2!important; } /* Name.Class */
 .highlight .no { color: #360 } /* Name.Constant */
 .highlight .nd { color: #99f } /* Name.Decorator */
-.highlight .ni { color: #999; } /* Name.Entity */
-.highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #000 } /* Name.Function */
+.highlight .ni { color: #999 } /* Name.Entity */
+.highlight .ne { color: #c00 } /* Name.Exception */
+.highlight .nf { color: #8efb83 } /* Name.Function */
 .highlight .nl { color: #99f } /* Name.Label */
-.highlight .nn { color: #000; } /* Name.Namespace */
-.highlight .nt { color: #2f6f9f; } /* Name.Tag */
+.highlight .nn { color: #000 } /* Name.Namespace */
+.highlight .nt { color: #2f6f9f } /* Name.Tag */
 .highlight .nv { color: #033 } /* Name.Variable */
-.highlight .ow { color: #000; } /* Operator.Word */
+.highlight .ow { color: #000 } /* Operator.Word */
 .highlight .w { color: #bbb } /* Text.Whitespace */
 .highlight .mf { color: #f60 } /* Literal.Number.Float */
 .highlight .mh { color: #f60 } /* Literal.Number.Hex */
