update(scss): Update style > scss > code > font, color

--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -28,7 +28,7 @@
 .highlight .n { color: #000 } /* Name.Attribute */
 .highlight .na { color: #000 } /* Name.Attribute */
 .highlight .nb { color: #366 } /* Name.Builtin */
-.highlight .nc { color: #74d6e2!important; } /* Name.Class */
+.highlight .nc { color: #000!important; } /* Name.Class */
 .highlight .no { color: #360 } /* Name.Constant */
 .highlight .nd { color: #99f } /* Name.Decorator */
 .highlight .ni { color: #999 } /* Name.Entity */
