update(scss): Update style > scss > code > font, color

--- a/_sass/tale/_syntax.scss
+++ b/_sass/tale/_syntax.scss
@@ -33,7 +33,7 @@
 .highlight .nd { color: #99f } /* Name.Decorator */
 .highlight .ni { color: #999 } /* Name.Entity */
 .highlight .ne { color: #c00 } /* Name.Exception */
-.highlight .nf { color: #8efb83 } /* Name.Function */
+.highlight .nf { color: #000 } /* Name.Function */
 .highlight .nl { color: #99f } /* Name.Label */
 .highlight .nn { color: #000 } /* Name.Namespace */
 .highlight .nt { color: #2f6f9f } /* Name.Tag */
