--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,21 +1,27 @@
 ---
-import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
-import { getReadingTime } from '../../utils/readingTime';
+import { type CollectionEntry, getCollection } from "astro:content";
+import BlogPost from "../../layouts/BlogPost.astro";
+import { getReadingTime } from "../../utils/readingTime";
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
+	const posts = (await getCollection("blog")).filter(
+		(post) => post.data.visible !== false,
+	);
 	return posts.map((post) => ({
 		params: { slug: post.slug },
 		props: post,
 	}));
 }
-type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<"blog">;
 
 const post = Astro.props;
 const { Content, headings } = await post.render();
 ---
 
-<BlogPost {...post.data} headings={headings} readingTime={getReadingTime(post.body)}>
+<BlogPost
+	{...post.data}
+	headings={headings}
+	readingTime={getReadingTime(post.body)}
+>
 	<Content />
 </BlogPost>
