--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,9 @@ import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 import FormattedDate from "../components/FormattedDate.astro";
 
-const posts = (await getCollection("blog")).sort(
-    (a, b) => b.data.date.valueOf() - a.data.date.valueOf(),
-);
+const posts = (await getCollection("blog"))
+    .filter((post) => post.data.visible !== false)
+    .sort((a, b) => b.data.date.valueOf() - a.data.date.valueOf());
 ---
 
 <BaseLayout title="Astro Tech Blog" wide={true}>
