--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -6,7 +6,9 @@ import FormattedDate from "../../components/FormattedDate.astro";
 import { getReadingTime } from "../../utils/readingTime";
 
 export async function getStaticPaths() {
-    const allPosts = await getCollection("blog");
+    const allPosts = (await getCollection("blog")).filter(
+        (post) => post.data.visible !== false,
+    );
     const uniqueTags = [
         ...new Set(allPosts.map((post) => post.data.tags).flat()),
     ];
