Add loading indicator to comments section for debugging

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,4 +1,8 @@
-<section class="utterances mx-auto mt-10 w-full"></section>
+<section class="utterances mx-auto mt-10 w-full">
+    <div class="loading-msg text-center text-gray-400 py-10">
+        Loading Comments...
+    </div>
+</section>
 
 <script>
     const container = document.querySelector("section.utterances");
