--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,16 @@ const posts = (await getCollection("blog"))
 ---
 
 <BaseLayout title="Astro Tech Blog" wide={true}>
-    <h1 class="text-[44px] font-extrabold tracking-tight mb-8">Latest Posts</h1>
+    <div class="mb-12">
+        <h1
+            class="text-[52px] font-bold tracking-tight mb-4 font-heading leading-none"
+        >
+            Engineering
+        </h1>
+        <p class="text-[20px] text-[#555] font-text font-normal">
+            The technology behind 023 Engineering
+        </p>
+    </div>
     <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12">
         {
             posts.map((post) => (
