--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const posts = (await getCollection("blog"))
             Engineering
         </h1>
         <p class="text-[20px] text-[#555] font-text font-normal">
-            The technology behind 023 Engineering
+            The technology behind My Engineering
         </p>
     </div>
     <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-12">
