Update blog card background color to rgb(246, 246, 246)

--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -59,7 +59,7 @@ const { tag, posts } = Astro.props;
                             </div>
                         )}
 
-                        <div class="flex-1 flex flex-col p-8 bg-[#f8f8fa]">
+                        <div class="flex-1 flex flex-col p-8 bg-[rgb(246,246,246)]">
                             {post.data.tags && post.data.tags.length > 0 && (
                                 <div class="mb-2 text-sm text-gray-500 font-medium">
                                     {post.data.tags.join(", ")}
