--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const posts = (await getCollection("blog"))
                             </div>
                         )}
 
-                        <div class="flex-1 flex flex-col p-8 bg-[#f8f8fa]">
+                        <div class="flex-1 flex flex-col p-8 bg-[rgb(246,246,246)]">
                             {post.data.tags && post.data.tags.length > 0 && (
                                 <div class="mb-2 text-sm text-gray-500 font-medium">
                                     {post.data.tags.join(", ")}
