--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -29,7 +29,7 @@ const { tag, posts } = Astro.props;
 ---
 
 <BaseLayout title={`Posts tagged with ${tag}`} wide={true}>
-    <div class="mb-12">
+    <div class="py-16">
         <h1
             class="text-[52px] font-bold tracking-tight mb-4 font-heading leading-none capitalize"
         >
