--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,12 +13,12 @@ const posts = (await getCollection("blog"))
 <BaseLayout title="Astro Tech Blog" wide={true}>
     <div class="py-16">
         <h1
-            class="text-[52px] font-bold tracking-tight mb-4 font-heading leading-none"
+            class="text-[44px] font-bold tracking-tight mb-4 font-heading leading-none"
         >
             Engineering
         </h1>
         <p class="text-[20px] text-[#555] font-text font-normal">
-            The technology behind 023 Engineering
+            The technology behind My Engineering
         </p>
     </div>
     <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-5 gap-y-10">
