--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -41,7 +41,9 @@ const { tag, posts } = Astro.props;
             } Engineering
         </p>
     </div>
-    <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-5 gap-y-10">
+    <ul
+        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-4 gap-y-8 md:gap-x-5 md:gap-y-10"
+    >
         {
             posts.map((post) => (
                 <li class="group flex flex-col h-full">
