--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,6 @@
 const today = new Date();
 ---
 
-<footer
-	class="w-full text-center py-8 text-gray-500 dark:text-gray-400 text-sm mt-auto"
->
+<footer class="w-full text-center py-8 text-gray-500 dark:text-gray-400 text-sm mt-auto">
 	<div class="px-4"></div>
 </footer>
